# NEXUS-A2A-OS

./: .env.example  .gitignore  .gitleaks.toml  00_QUICKSTART.md  01_PROJECT_STATE.md  02_ARCHITECTURE.md  04_GOVERNANCE.md  AGENTS.md  CODEX_HANDOFF.md  COLDSTART_BOOT.txt  COLDSTART_GUIDE.txt  COLD_HANDOFF.txt  CONTRIBUTING.md  EVIDENCE.md  FOUNDRY_HERMES_OPENSHELL_COMBINED_PLAN.md  GIT_WORKFLOW.txt  INSPIRATION.md  LICENSE  MIGRATION_GUIDE.md  NEXUS_OS_V4_MASTER_PLAN.md  NEXUS_ZO_CLAW_INTEGRATION_PLAN.md  ONBOARDING.md  PHASE0_IMPLEMENTATION_PACKAGE.md  PI_RECONNECT.txt  PORTS.md  README.md  coldstart_install.py  dg_to_gspp.py  langfuse_config.py  langfuse_tracker.py  mock_api_server.py  opusman_agent.py  package.json  pyproject.toml  pytest.ini  run-dev.sh  server-daemon.sh  start-server.sh  start.sh  supabase_client.py  (+1 more)
.codex/: QUICKSTART.txt  plugin_hygiene_policy.md
.github/: FUNDING.yml
.openclaw/: QUICKSTART.txt
.pi/: ARCHITECTURE_DEEP_DIVE.md  CRITICAL_INTEGRATION_REVIEW.md  EXPERT_REPORTS_SYNTHESIS.md  GMR_SYSTEM_DESIGN.md  HERMES_PROFILE.md  NEXUS_GROUNDING_KNOWLEDGE.md  PRIORITY_WORK_PLAN.md  QUICKSTART.txt  README.md  ROTATION_TABLE.md  SESSION_FINAL_2026-04-16.md  SESSION_SUMMARY_2026-04-16.md  SKILL.md  SWARM_TEAM_DESIGN.md  models_registry.json
agent-ctx/: 12-13-main.md  2+4-governor-fix-agent.md  2-a-overview-enhancer.md  2-a-subagent.md  2-api-builder.md  2-b-main.md  2-c-main.md  2-stresslab-enhancer.md  2-websocket-service-builder.md  3-a-main.md  3-a-overview-enhancer.md  3-batch-harness-rewriter.md  3-c-main.md  3-main.md  3-paper-pipeline-builder.md  4-ai-assistant.md  4-ai-provider-bridge.md  5-6-subagent.md  (+9 more)
(+370 files in other folders)
