[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-os"
version = "3.0.0"
description = "NEXUS Sovereign OS"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "pyyaml>=6.0",
    "requests>=2.31",
    "pytest>=7.4",
    "playwright>=1.40"
]

[tool.setuptools.packages.find]
where = ["src"]